instructions.Instructions.scala.error
Compilation error:
Instructions:12: error: identifier expected but '(' found.
e.g.()
    ^